# Pac-Man

./: README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/dokumentaatio/src/: pyproject.toml
laskarit/pacman-app/: .coverage  .pylintrc  pyproject.toml  tasks.py
laskarit/pacman-app/htmlcov/: .gitignore  d_145eef247bfb46b6_index_py.html  d_145eef247bfb46b6_peli_py.html  d_145eef247bfb46b6_pelipyorii_py.html  index.html  status.json
laskarit/pacman-app/src/: .coverage  index.py  naytto.py  peli.py  pelipyorii.py
laskarit/pacman-app/src/tests/: peli_test.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko3/: Untitled Diagram.drawio  monopoli_kaavio.md
pacman-app/: .coverage  .pylintrc  pyproject.toml  tasks.py
pacman-app/htmlcov/: d_145eef247bfb46b6_events_py.html  d_145eef247bfb46b6_index_py.html  d_145eef247bfb46b6_naytto_py.html  d_145eef247bfb46b6_peli_py.html  d_145eef247bfb46b6_pelipyorii_py.html  index.html  status.json
pacman-app/src/: Main.py  events.py  index.py  peli.py
pacman-app/src/features/: level.py  peli.py  pelipyorii.py  score.py
pacman-app/src/ominaisuudet/: level.py  peli.py  pelipyorii.py  score.py
pacman-app/src/sprites/: ghosts.py  pacman.py
pacman-app/src/tests/: peli_test.py
poetry-testi/: pyproject.toml
