[tool.poetry]
name = "pacman-app"
version = "0.1.0"
description = ""
authors = ["Nicolas Kivimäki <kivimakinicolas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
